--- a/templates/index.html
+++ b/templates/index.html
@@ -51,9 +51,12 @@
 
         <!-- HERO -->
 <section class="hero">
-    <video class="hero-video" autoplay muted loop playsinline poster="/static/capa-do-video.jpg">
-        <source src="/static/a981b97b-577d-4e40-a670-793127e827f4 (video-converter.com).mp4" type="video/mp4">
-        Seu navegador não suporta vídeos HTML5.
+    <video class="hero-video video-desktop" autoplay muted loop playsinline poster="/static/capa-desktop.jpg">
+        <source src="/static/video-horizontal.mp4" type="video/mp4">
+    </video>
+
+    <video class="hero-video video-mobile" autoplay muted loop playsinline poster="/static/capa-mobile.jpg">
+        <source src="/static/video-vertical.mp4" type="video/mp4">
     </video>
 
     <div class="hero-overlay"></div>
