mudanca na imagem de eventos

--- a/templates/eventos.html
+++ b/templates/eventos.html
@@ -50,7 +50,7 @@
             <div class="evento-detalhe">
 
                 <!-- Placeholder para a imagem do evento -->
-                <img src="/static/cadeado.jpg" alt="Imagem do Evento" class="banner-evento">
+                <img src="/static/IMG_0173.jpg" alt="Imagem do Evento" class="banner-evento">
 
                 <div class="info-evento">
                     <h1 class="titulo-evento">Festa Zero800</h1>
