MUDANCA NA PAGINA DE imagem em EVENTOS

--- a/templates/eventos.html
+++ b/templates/eventos.html
@@ -72,34 +72,26 @@
                     <div class="drinks-container">
                         
                         <div class="drink-card">
-                            <img src="/static/Imagem.jpg" alt="Gin Tônica" class="drink-photo">
-                            <p>ABSOLUT</p>
+                            <img src="/static/794b0053-b179-4105-bc86-d52982b19213.JPG" alt="Gin Tônica" class="drink-photo">
+                            <p>BALLANTINE'S</p>
                         </div>
                         
                         <div class="drink-card">
-                            <img src="/static/Imagem 2.jpg" alt="BEEFEATER" class="drink-photo">
+                            <img src="/static/c524488d-94f9-494b-a132-b81f4d4cc31c.JPG" alt="BEEFEATER" class="drink-photo">
                             <p>BEEFEATER</p>
                         </div>
                         
                         <div class="drink-card">
-                            <img src="/static/Imagem 4.jpg" alt="Cerveja Artesanal" class="drink-photo">
-                            <p>SMIRNOFF</p>
+                            <img src="/static/cef16502-25af-48c0-837f-bb767c7d080e.JPG" alt="Cerveja Artesanal" class="drink-photo">
+                            <p>REDBULL</p>
                         </div>
 
                         <div class="drink-card">
-                            <img src="/static/Imagem 5.jpg" alt="Caipirinha" class="drink-photo">
-                            <p>GORDON'S</p>
+                            <img src="/static/5517c59d-8f4b-44c6-898c-bf7c3481b188.JPG" alt="Caipirinha" class="drink-photo">
+                            <p>BOMBAY</p>
                         </div>
 
-                        <div class="drink-card">
-                            <img src="/static/Imagem 7.jpg" alt="Tequila" class="drink-photo">
-                            <p>RED-BULL</p>
-                        </div>
-                        
-                        <div class="drink-card">
-                            <img src="/static/Imagem 6.jpg" alt="Água e Refri" class="drink-photo">
-                            <p>DIVERSOS</p>
-                        </div>
+
                         
                     </div>
                     <!-- FIM CÓDIGO DAS BEBIDAS -->
